--- a/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
@@ -36,7 +36,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-29T19:08:07-0500"
-		dateModified="2019-10-05T14:42:07-0500"
+		dateModified="2019-10-05T17:27:40-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.aoindustries:ao-credit-cards-stripe:pom.version}" />
@@ -51,15 +51,24 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 				groupId="@{documented.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{documented.scm.url}"
-			>
-				<ul>
-					<li>
-						Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/12.1.0/jar">com.stripe:stripe-java:jar:12.1.0</ao:a>,
-						which uses <ao:a href="https://stripe.com/docs/upgrades#2019-09-09">Stripe API version 2019-09-09</ao:a>.
-					</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.1.1"
+			datePublished="2019-10-05T17:27:40-0500"
+			groupId="@{documented.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{documented.scm.url}"
+		>
+			<ul>
+				<li>
+					Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/12.1.0/jar">com.stripe:stripe-java:jar:12.1.0</ao:a>,
+					which uses <ao:a href="https://stripe.com/docs/upgrades#2019-09-09">Stripe API version 2019-09-09</ao:a>.
+				</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
