--- a/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
@@ -37,7 +37,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-29T19:08:07-0500"
-		dateModified="2020-03-07T06:01:29-0600"
+		dateModified="2020-03-15T00:27:10-05:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.aoindustries:ao-credit-cards-stripe:pom.version}" />
@@ -62,6 +62,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 						Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/13.1.0/jar">com.stripe:stripe-java:jar:13.1.0</ao:a>,
 						which uses <ao:a href="https://stripe.com/docs/upgrades#2019-10-08">Stripe API version 2019-10-08</ao:a>.
 					</li>
+					<li>Updated dependencies.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
