--- a/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/ao-credit-cards/stripe/changelog.jspx
@@ -37,7 +37,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-29T19:08:07-0500"
-		dateModified="2020-11-29T05:33:46-06:00"
+		dateModified="2020-11-29T06:39:21-06:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.aoindustries:ao-credit-cards-stripe:pom.version}" />
@@ -52,17 +52,26 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
 				scmUrl="@{project.scm.url}"
-			>
-				<ul>
-					<li>
-						Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/20.30.0/jar">com.stripe:stripe-java:jar:20.30.0</ao:a>,
-						which uses <ao:a href="https://stripe.com/docs/upgrades#2020-08-27">Stripe API version 2020-08-27</ao:a>.
-					</li>
-					<li>Updated dependencies.</li>
-					<li>Resolved editor warnings.</li>
-				</ul>
-			</changelog:release>
+			/>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.2.0"
+			datePublished="2020-11-29T06:39:21-06:00"
+			groupId="@{project.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{project.scm.url}"
+		>
+			<ul>
+				<li>
+					Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/20.30.0/jar">com.stripe:stripe-java:jar:20.30.0</ao:a>,
+					which uses <ao:a href="https://stripe.com/docs/upgrades#2020-08-27">Stripe API version 2020-08-27</ao:a>.
+				</li>
+				<li>Updated dependencies.</li>
+				<li>Resolved editor warnings.</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
