--- a/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-ao-credit-cards-stripe - Provider for Stripe.
+ao-payments-stripe - Provider for Stripe.
 Copyright (C) 2016, 2017, 2019, 2020, 2021  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
 
-This file is part of ao-credit-cards-stripe.
+This file is part of ao-payments-stripe.
 
-ao-credit-cards-stripe is free software: you can redistribute it and/or modify
+ao-payments-stripe is free software: you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
-ao-credit-cards-stripe is distributed in the hope that it will be useful,
+ao-payments-stripe is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
-along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
+along with ao-payments-stripe.  If not, see <http://www.gnu.org/licenses />.
 -->
 <jsp:root
-	xmlns:ao="https://aoindustries.com/ao-taglib/"
+	xmlns:ao="https://oss.aoapps.com/taglib/"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:changelog="https://semanticcms.com/changelog/taglib/"
 	xmlns:core="https://semanticcms.com/core/taglib/"
@@ -37,7 +37,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-29T19:08:07-05:00"
-		dateModified="2021-05-26T06:36:49-05:00"
+		dateModified="2021-05-31T01:04:26-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -45,10 +45,12 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 				version="@{project.version}"
 				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
+				repository="https://s01.oss.sonatype.org/content/repositories/snapshots/"
 				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Minimum Java version changed from 1.8 to 11.</li>
+					<li>Maven artifact relocated from <code>com.aoindustries:ao-credit-cards-stripe</code> to <code>com.aoapps:ao-payments-stripe</code>.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
@@ -57,8 +59,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.3.1"
 			datePublished="2021-02-09T09:38:17-06:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -70,8 +72,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2020-12-11T12:21:40-06:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -83,8 +85,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.2.0"
 			datePublished="2020-11-29T06:39:21-06:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -107,8 +109,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.1.2"
 			datePublished="2020-03-28T16:17:03-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -128,8 +130,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.1.1"
 			datePublished="2019-10-05T17:27:40-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -144,8 +146,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.1.0"
 			datePublished="2019-06-21T00:58:38-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -194,8 +196,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.0.3"
 			datePublished="2017-07-20T01:08:25-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -207,12 +209,12 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.0.2"
 			datePublished="2016-11-15T23:03:34-06:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
-				<li>New <core:link book="/ao-oss-parent" page="/index.jspx" /> POM to simplify <code>pom.xml</code> files.</li>
+				<li>New <core:link book="/parent" page="/index.jspx" /> POM to simplify <code>pom.xml</code> files.</li>
 				<li>Project documentation moved to per-project book in <ao:a href="https://semanticcms.com/">SemanticCMS</ao:a> format.</li>
 				<li>Added changelog as top-level project link.</li>
 				<!-- TODO: Fix all to https, and make sure still works -->
@@ -224,8 +226,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.0.1"
 			datePublished="2016-10-20T18:34:00-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
@@ -238,8 +240,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			projectName="@{documented.name}"
 			version="1.0.0"
 			datePublished="2016-10-06T12:43:00-05:00"
-			groupId="@{project.groupId}"
-			artifactId="@{documented.artifactId}"
+			groupId="com.aoindustries"
+			artifactId="ao-credit-cards-stripe"
 			scmUrl="@{project.scm.url}"
 		>
 			<ul>
