--- a/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
@@ -37,7 +37,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-29T19:08:07-05:00"
-    dateModified="2022-11-16T20:56:11-06:00"
+    dateModified="2022-11-22T23:08:36-06:00"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -47,13 +47,22 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      >
-        <ul>
-          <li>Updated for compatibility with <ao:a href="https://github.com/stripe/stripe-java/releases/tag/v22.0.0">stripe-java-22.0.0</ao:a>.
-          </li>
-        </ul>
-      </changelog:release>
+      />
     </c:if>
+
+    <changelog:release
+      projectName="@{documented.name}"
+      version="2.1.0"
+      datePublished="2022-11-22T23:08:36-06:00"
+      groupId="@{project.groupId}"
+      artifactId="@{documented.artifactId}"
+      scmUrl="@{project.scm.url}"
+    >
+      <ul>
+        <li>Updated for compatibility with <ao:a href="https://github.com/stripe/stripe-java/releases/tag/v22.0.0">stripe-java-22.0.0</ao:a>.
+        </li>
+      </ul>
+    </changelog:release>
 
     <changelog:release
       projectName="@{documented.name}"
