--- a/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/payments/stripe/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 ao-payments-stripe - Provider for Stripe.
-Copyright (C) 2016, 2017, 2019, 2020, 2021, 2022  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2019, 2020, 2021, 2022, 2023  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -37,7 +37,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-29T19:08:07-05:00"
-    dateModified="2022-11-22T23:08:36-06:00"
+    dateModified="2023-02-26T14:03:56Z"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -125,7 +125,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
       <ul>
         <li>
           <p>
-            Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/20.30.0/jar">com.stripe:stripe-java:jar:20.30.0</ao:a>,
+            Upgraded to current version of <ao:a href="https://central.sonatype.com/search?namespace=com.stripe&q=a%3Astripe-java/20.30.0/jar">com.stripe:stripe-java:jar:20.30.0</ao:a>,
             which uses <ao:a href="https://stripe.com/docs/upgrades#2020-08-27">Stripe API version 2020-08-27</ao:a>.
           </p>
           <p>
@@ -152,7 +152,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
           This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
         </li>
         <li>
-          Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/18.12.0/jar">com.stripe:stripe-java:jar:18.12.0</ao:a>,
+          Upgraded to current version of <ao:a href="https://central.sonatype.com/search?namespace=com.stripe&q=a%3Astripe-java/18.12.0/jar">com.stripe:stripe-java:jar:18.12.0</ao:a>,
           which uses <ao:a href="https://stripe.com/docs/upgrades#2020-03-02">Stripe API version 2020-03-02</ao:a>.
         </li>
         <li>Updated dependencies.</li>
@@ -169,7 +169,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     >
       <ul>
         <li>
-          Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/12.1.0/jar">com.stripe:stripe-java:jar:12.1.0</ao:a>,
+          Upgraded to current version of <ao:a href="https://central.sonatype.com/search?namespace=com.stripe&q=a%3Astripe-java/12.1.0/jar">com.stripe:stripe-java:jar:12.1.0</ao:a>,
           which uses <ao:a href="https://stripe.com/docs/upgrades#2019-09-09">Stripe API version 2019-09-09</ao:a>.
         </li>
       </ul>
@@ -186,7 +186,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
       <ul>
         <li>Minimum Java version changed from 1.6 to 1.8.</li>
         <li>
-          Upgraded to current version of <ao:a href="https://search.maven.org/artifact/com.stripe/stripe-java/10.1.0/jar">com.stripe:stripe-java:jar:10.1.0</ao:a>,
+          Upgraded to current version of <ao:a href="https://central.sonatype.com/search?namespace=com.stripe&q=a%3Astripe-java/10.1.0/jar">com.stripe:stripe-java:jar:10.1.0</ao:a>,
           which uses <ao:a href="https://stripe.com/docs/upgrades#2019-05-16">Stripe API version 2019-05-16</ao:a>.
         </li>
         <li>
@@ -250,8 +250,7 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
         <li>New <core:link book="/parent" page="/index.jspx" /> POM to simplify <code>pom.xml</code> files.</li>
         <li>Project documentation moved to per-project book in <ao:a href="https://semanticcms.com/">SemanticCMS</ao:a> format.</li>
         <li>Added changelog as top-level project link.</li>
-        <!-- TODO: Fix all to https, and make sure still works -->
-        <li>Reverted dependency to <ao:a href="http://search.maven.org/#artifactdetails|com.stripe|stripe-java|2.10.2|jar">com.stripe:stripe-java:2.10.2</ao:a> pending additional testing of the 3.* release.</li>
+        <li>Reverted dependency to <ao:a href="https://central.sonatype.com/artifact/com.stripe/stripe-java/2.10.2">com.stripe:stripe-java:2.10.2</ao:a> pending additional testing of the 3.* release.</li>
       </ul>
     </changelog:release>
 
